check valid doamin

--- a/week2/.vscode/settings.json
+++ b/week2/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "nss.h": "c",
-        "netdb.h": "c"
+        "netdb.h": "c",
+        "regex.h": "c"
     }
 }
