ADd source code week4- final

--- a/week4/Makefile
+++ b/week4/Makefile
@@ -2,7 +2,11 @@ CFLAGS = -c -Wall
 CC = gcc
 LIBS =  -lm 
 
-all: client server
+all: clean server client
+
+
+client: stack.o client.o
+	${CC} stack.o client.o -o client
 
 server: stack.o server.o
 	${CC} stack.o server.o -o server
@@ -10,8 +14,8 @@ server: stack.o server.o
 server.o: server.c
 	${CC} ${CFLAGS} server.c
 	
-client : client.c
-	${CC} client.c -o client
+client.o : client.c
+	${CC} ${CFLAGS} client.c
 
 stack.o : stack.c
 	${CC} ${CFLAGS} stack.c
