--- a/BTL/Makefile
+++ b/BTL/Makefile
@@ -2,13 +2,14 @@ CFLAGS = -c -Wall
 CC = gcc
 LIBS =  -lm 
 
-all: client server
+all: clear clean client server
 
-client: client.c clientHelper.c checkinput.c
-	${CC} client.c clientHelper.c  checkinput.c -o client
+client: client.c clientHelper.c checkinput.c caroRanking.c
+	${CC} client.c clientHelper.c  checkinput.c caroRanking.c -o client
 
-server: server.c serverHelper.c checkinput.c linklist.c
-	${CC} server.c serverHelper.c checkinput.c linklist.c -o server
-
+server: server.c serverHelper.c caroai.c checkinput.c linklist.c caroRanking.c
+	${CC} server.c  serverHelper.c caroai.c checkinput.c linklist.c caroRanking.c -o server
 clean:
 	rm -f *.o *~
+clear:
+	clear
